--- a/gallery.html
+++ b/gallery.html
@@ -66,8 +66,8 @@
             <img src="../adryl_portfolio/images/5.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/5555.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/4.png" alt="Image" class="image"/>
-            <img src="../adryl_portfolio/images/ssh (2).png" alt="Image" class="image"/>
-            <img src="../adryl_portfolio/images/ssh (5).png" alt="Image" class="image"/>
+            <img src=".../adryl_portfolio/images/ssh (2).png" alt="Image" class="image"/>
+            <img src=".../adryl_portfolio/images/ssh (5).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (8).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (11).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (14).png" alt="Image" class="image"/>
