--- a/gallery.html
+++ b/gallery.html
@@ -55,6 +55,10 @@
             <img src="../adryl_portfolio/images/1.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/2.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (4).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (7).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (10).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (13).png" alt="Image" class="image"/>
         </div>
 
         <div class="col images">
@@ -62,12 +66,22 @@
             <img src="../adryl_portfolio/images/5.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/5555.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/4.png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (2).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (5).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (8).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (11).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (14).png" alt="Image" class="image"/>
         </div>
 
         <div class="col images">
             <img src="../adryl_portfolio/images/7.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/Dirt Wheel collateral 2 (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/9.png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (3).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (6).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (9).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (12).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (15).png" alt="Image" class="image"/>
         </div>
     </div>
 </section>
