--- a/gallery.html
+++ b/gallery.html
@@ -77,6 +77,7 @@
             <img src="../adryl_portfolio/images/7.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/Dirt Wheel collateral 2 (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/9.png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/12.png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (3).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (6).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (9).png" alt="Image" class="image"/>
