--- a/gallery.html
+++ b/gallery.html
@@ -120,14 +120,14 @@
 <div class="row">
     <div class="col footnav"><a href="home.html">home</a></div>
     <div class="col footnav"><a href="home.html #about">about</a></div>
-    <div class="col footnav"><a href="https://mail.google.com/mail/u/0/#drafts?compose=CllgCHrgDMljfBSRdxtGTpjdfbhlNtsxDMWNLBqMjKvbsvSGDJWbFNqTmbpMMnJRdshgzcPmxfg">contact</a></div>
+    <div class="col footnav"><a href="mailto:adylstepl@gmail.com">contact</a></div>
     <div class="col footnav"><a href="gallery.html">gallery</a></div>
 </div>
 <div class="row iconic">
 
     <div class="col icons"><a href="https://www.behance.net/aquastephanie"><img src="../adryl_portfolio/images/behance.png" class="icon" alt="Behace"/></a></div>
     <div class="col icons"><a href="https://www.instagram.com/gigglystevie/"><img src="../adryl_portfolio/images/instagram.png" class="icon" alt="instagram"/></a></div>
-    <div class="col icons"><a href="https://www.facebook.com/adryllstephanie.baldonado"><img src="../adryl_portfolio/images/facebook.png" class="icon" alt="Facebook"/></a></div>
+    <div class="col icons"><a href="https://wa.me/6591798287"><img src="../adryl_portfolio/images/whatsapp" class="icon" alt="WhatsApp"/></a></div>
     <div class="col icons"><a href="https://www.linkedin.com/in/adrylstephanielim/"><img src="../adryl_portfolio/images/linkedin.png" class="icon" alt="Linkedin"/></a></div>
 </div>
     </div>
