--- a/gallery.html
+++ b/gallery.html
@@ -127,7 +127,7 @@
 
     <div class="col icons"><a href="https://www.behance.net/aquastephanie"><img src="../adryl_portfolio/images/behance.png" class="icon" alt="Behace"/></a></div>
     <div class="col icons"><a href="https://www.instagram.com/gigglystevie/"><img src="../adryl_portfolio/images/instagram.png" class="icon" alt="instagram"/></a></div>
-    <div class="col icons"><a href="https://wa.me/6591798287"><img src="../adryl_portfolio/images/whatsapp" class="icon" alt="WhatsApp"/></a></div>
+    <div class="col icons"><a href="https://wa.me/6591798287"><img src="../adryl_portfolio/images/whatsapp.png" class="icon" alt="WhatsApp"/></a></div>
     <div class="col icons"><a href="https://www.linkedin.com/in/adrylstephanielim/"><img src="../adryl_portfolio/images/linkedin.png" class="icon" alt="Linkedin"/></a></div>
 </div>
     </div>
