--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,8 @@
     <div class="row scrolling">
 
         <div class="col images">
-            <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"/>
+            <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image" onclick="enlargeImg(2)"
+             id="img1"/>
             <img src="../adryl_portfolio/images/ssh (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (7).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (10).png" alt="Image" class="image"/>
