--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,20 @@
     <div class="row scrolling">
 
         <div class="col images">
-            <img id="myImg" src="../adryl_portfolio/images/ssh (1).png" alt="Image" style="width:100%;max-width:300px">
+            <img id="myImg" src="../adryl_portfolio/images/ssh (1).png" alt="Image" style="width:100%;max-width:300px" id="myModal">
+            
+            <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+    
             <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (7).png" alt="Image" class="image"/>
