--- a/gallery.html
+++ b/gallery.html
@@ -48,6 +48,25 @@
 
 
     <div class="row scrolling">    
+
+
+
+<div>
+  <button class="imgLink">
+	<img
+	  src="../adryl_portfolio/images/ssh (1).png" alt="artificial lake"
+	/>
+  </button>
+
+  <button class="imgLink">
+	<img
+	  src="../adryl_portfolio/images/ssh (1).png"
+	  alt="album art"
+	/>
+  </button>
+</div>
+
+        
             <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (7).png" alt="Image" class="image"/>
