--- a/gallery.html
+++ b/gallery.html
@@ -48,6 +48,7 @@
 
 
     <div class="row scrolling"> 
+        <div class="col images">
             <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (7).png" alt="Image" class="image"/>
