--- a/gallery.html
+++ b/gallery.html
@@ -49,6 +49,23 @@
 
     <div class="row scrolling"> 
         <div class="col images">
+
+            <div>
+  <button class="imgLink">
+	<img
+	  src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"
+	  alt="artificial lake"
+	/>
+  </button>
+
+  <button class="imgLink">
+	<img
+	  src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"
+	  alt="album art"
+	/>
+  </button>
+</div>
+            
             <img src="../adryl_portfolio/images/ssh (1).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (4).png" alt="Image" class="image"/>
             <img src="../adryl_portfolio/images/ssh (7).png" alt="Image" class="image"/>
