--- a/gallery.html
+++ b/gallery.html
@@ -110,6 +110,39 @@
     </div>
 </section>
 
+    <section class="row show">
+    <h1>Awards</h1>
+</section>
+<section class="graph">
+    <div class="row slide">
+        <div class="col">
+                <img src="../adryl_portfolio/images/dnt.jpg" alt="moodboards" class="port"/>
+        </div>
+
+        <div class="col">
+                <img src="../adryl_portfolio/images/yebronze.jpg" alt="moodboards" class="land"/>
+        </div>
+
+        <div class="col">
+                <img src="../adryl_portfolio/images/yesilver.jpg" alt="moodboards" class="land"/>
+        </div>
+
+        <div class="row">
+                <img src="../adryl_portfolio/images/allrounded.jpg" alt="Animals" class="land"/>
+        </div>
+
+        <div class="row">
+                <img src="../adryl_portfolio/images/siaoon.jpg" alt="Animals" class="land"/>
+        </div>
+        
+        <div class="row">
+                    
+                <img src="../adryl_portfolio/images/nationalday.jpg" alt="Animals" class="port"/>
+        </div>
+            </div>
+            </section>
+
+
 </main>
 
 <!--Footer-->
