--- a/gallery.html
+++ b/gallery.html
@@ -108,9 +108,7 @@
                 <img src="../adryl_portfolio/images/animals-06.png" alt="Animals" class="animal"/>
             </div>
     </div>
-</section>
-
-    <section class="row show">
+</section><section class="row show">
     <h1>Awards</h1>
 </section>
 <section class="graph">
@@ -141,10 +139,8 @@
         </div>
             </div>
             </section>
-<section class="row show">
-    <h1>Sketches</h1>
-</section>
-<section class="graph">
+
+            <section class="sketches">
                 <div class="row slide">
                     <div class="col">
                             <img src="../adryl_portfolio/images/draw 3.jpg" alt="moodboards" class="port"/>
@@ -169,23 +165,21 @@
                     <div class="row">
                         <img src="../adryl_portfolio/images/draw5.jpg" alt="moodboards" class="port"/>
                     </div>
-                    <div class="row">
+                    <div class="row wordsss">
                         <img src="../adryl_portfolio/images/draw6.jpg" alt="moodboards" class="port"/>
-                    </div>
-                    <div class="row">
-                        <p>More Artworks @ Behance</p>
                     </div>
                         </div>
                         </section>
-    <section class="writeups">
-    <div class="row">
-    <h1>Write Up</h1></div>
-    <div class="row">
-    <p>In 2018 I got a once-in-a-lifetime opportunity to represent my school by participating in the National Day Parade (NDP) as the show choir, where we brought back the old tradition of the show choir in NDP. In addition, I volunteered to be a Peer Supported Leader to learn how to care for others in times of need and be a team player with group projects to support our peers.
-        In 2019, I advanced from Normal Academic Levels to Express. Our choir attended Zarathustra at Esplanade concert hall, where we performed Belshazzar’s Feast with other choir professionals. In the same year, and was promoted to an Executive Committee in the Peer Support Board. I learned to be a reliable leader and a better follower there. As well as in 2019’s Bright Spot challenge as the leader. We went to an old folk’s home to entertain the elderlies with the games we made together.
-        </p></div>
+
+<section class="writeups">
+    <h1>Write Up</h1>
 </section>
     
+    <section class="writeups">
+    <p>In 2018 I got a once-in-a-lifetime opportunity to represent my school by participating in the National Day Parade (NDP) as the show choir, where we brought back the old tradition of the show choir in NDP. In addition, I volunteered to be a Peer Supported Leader to learn how to care for others in times of need and be a team player with group projects to support our peers.
+        In 2019, I advanced from Normal Academic Levels to Express. Our choir attended Zarathustra at Esplanade concert hall, where we performed Belshazzar’s Feast with other choir professionals. In the same year, and was promoted to an Executive Committee in the Peer Support Board. I learned to be a reliable leader and a better follower there. As well as in 2019’s Bright Spot challenge as the leader. We went to an old folk’s home to entertain the elderlies with the games we made together.
+        </p>
+</section>
 </main>
 
 <!--Footer-->
