--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,9 @@
                 <img src="../adryl_portfolio/images/animals-06.png" alt="Animals" class="animal"/>
             </div>
     </div>
-</section><section class="row show">
+</section>
+    
+    <section class="show">
     <h1>Awards</h1>
 </section>
 <section class="graph">
