--- a/gallery.html
+++ b/gallery.html
@@ -137,15 +137,15 @@
                 <img src="../adryl_portfolio/images/yesilver.jpg" alt="moodboards" class="land"/>
         </div>
 
-        <div class="row">
+        <div class="col">
                 <img src="../adryl_portfolio/images/allrounded.jpg" alt="Animals" class="land"/>
         </div>
 
-        <div class="row">
+        <div class="col">
                 <img src="../adryl_portfolio/images/siaoon.jpg" alt="Animals" class="land"/>
         </div>
         
-        <div class="row">
+        <div class="col">
                     
                 <img src="../adryl_portfolio/images/nationalday.jpg" alt="Animals" class="port"/>
         </div>
@@ -157,6 +157,15 @@
 
             <section class="sketches">
                 <div class="row slide">
+                     <div class="col">
+                <img src="../adryl_portfolio/images/painting.jpg" alt="moodboards" class="port"/>
+                     </div>
+                    <div class="col">
+                            <img src="../adryl_portfolio/images/peach.jpg" alt="moodboards" class="port"/>
+                    </div>
+                    <div class="col">
+                            <img src="../adryl_portfolio/images/fish.jpg" alt="moodboards" class="port"/>
+                    </div>
                     <div class="col">
                             <img src="../adryl_portfolio/images/draw 3.jpg" alt="moodboards" class="port"/>
                     </div>
